- fixed layout-bug for credits in visual editor - fixed changing of width and alignment for [media-credit]
git-svn-id: http://plugins.svn.wordpress.org/media-credit/trunk@888480 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/media-credit-tinymce.css
+++ b/css/media-credit-tinymce.css
@@ -8,6 +8,7 @@ span.mceMediaCreditTemp {
 	width: 100%;
 	padding: 0;
 	margin: 0;
+	font-weight: normal;
 }
 span.mceMediaCreditTemp a {
     color: blue;
